ArgoCD GitOps/Analytics Node/deployments/backend-analytics-node-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-analytics-node-ingress
  labels:
    name: backend-analytics-node-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: analytics-node.domain.com
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: analytics-node-svc
            port: 
              number: 80
